--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,169 +1,75 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.1
+aiosignal==1.4.0
 annotated-types==0.7.0
-anyio==4.10.0
-argcomplete==3.6.2
-attrs==25.1.0
-Beaker==1.12.1
+anyio==4.11.0
+attrs==25.4.0
 beautifulsoup4==4.14.2
-blivet==3.12.1
-blivet-gui==2.6.0
-boto3==1.40.51
-botocore==1.40.51
-Brlapi==0.8.6
-Brotli==1.1.0
-cachetools==5.5.2
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
-click==8.2.1
-crypt_r==3.13.1
-cryptography==44.0.0
-cssselect==1.2.0
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-dbus_next==0.2.3
-distro==1.9.0
-dnf==4.23.0
-dnspython==2.8.0
-dotenv==0.9.9
-ecdsa==0.19.1
-email-validator==2.3.0
-evdev==1.9.1
-fastapi==0.116.1
-fedora-third-party==0.10
-file-magic==0.4.0
-fros==1.1
-google-ai-generativelanguage==0.6.15
-google-api-core==2.25.1
+bitarray==3.7.2
+cachetools==6.2.1
+certifi==2025.10.5
+charset-normalizer==3.4.4
+ckzg==2.1.5
+click==8.3.0
+cytoolz==1.1.0
+eth-account==0.13.7
+eth-hash==0.7.1
+eth-keyfile==0.8.1
+eth-keys==0.7.0
+eth-rlp==2.2.0
+eth-typing==5.2.1
+eth-utils==5.3.1
+eth_abi==5.2.0
+fastapi==0.119.0
+frozenlist==1.8.0
+google==3.0.0
+google-api-core==2.27.0
 google-api-python-client==2.185.0
-google-auth==2.40.3
+google-auth==2.41.1
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
-google-generativeai==0.8.5
-googleapis-common-protos==1.70.0
-grpcio==1.75.0
-grpcio-status==1.71.2
+google-genai==1.46.0
+googleapis-common-protos==1.71.0
 h11==0.16.0
+hexbytes==1.3.1
 httpcore==1.0.9
 httplib2==0.31.0
+httptools==0.7.1
 httpx==0.28.1
-humanize==4.12.0
-i3ipc==2.2.1
-idna==3.10
-iso639==0.1.4
-jiter==0.11.0
-jmespath==1.0.1
-joblib==1.5.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langtable==0.0.69
-libcomps==0.1.22
-libdnf==0.74.0
-louis==3.33.0
-lutris==0.5.19
-lxml==5.3.2
-Mako==1.2.3
-MarkupSafe==3.0.2
-mercurial==6.9.5
-meson==1.7.2
-moddb==0.12.0
-motor==3.7.1
-mutagen==1.47.0
-netifaces==0.11.0
-nftables==0.1
-numpy==2.3.3
-nwg-displays==0.3.26
-nwg-panel==0.10.12
+idna==3.11
+multidict==6.7.0
 oauthlib==3.3.1
-olefile==0.47
-openai==1.108.0
-packaging==24.2
-pandas==2.3.2
-passlib==1.7.4
-Paste==3.10.1
-perf==0.1
-pexpect==4.9.0
-pid==2.2.3
-pillow==11.1.0
-ply==3.11
-productmd==1.45
-progressbar2==4.5.0
+parsimonious==0.10.0
+propcache==0.4.1
 proto-plus==1.26.1
-protobuf==5.29.5
-psutil==6.1.1
-ptyprocess==0.7.0
-pwquality==1.4.5
+protobuf==6.33.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-PyAudio==0.2.13
-pycairo==1.25.1
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodomex==3.23.0
-pycups==2.0.4
-pydantic==2.11.9
-pydantic_core==2.33.2
-pyenchant==3.2.2
-PyGObject==3.50.0
-pyinotify==0.9.6
-pykickstart==3.62
-pymongo==4.15.0
-pyOpenSSL==25.0.0
-pyparsing==3.2.4
-pyparted==3.13.0
-PyPDF2==3.0.1
-pypresence==4.3.0
-pyquery==2.0.1
-PySocks==1.7.1
-python-augeas==1.2.0
-python-dateutil==2.9.0.post0
+pycryptodome==3.23.0
+pydantic==2.12.3
+pydantic_core==2.41.4
+pyparsing==3.2.5
 python-dotenv==1.1.1
-python-jose==3.5.0
-python-linux-procfs==0.7.3
-python-meh==0.52
-python-pam==2.0.2
-python-utils==3.9.0
-python-xlib==0.33
-pytz==2025.2
-pyudev==0.24.3
-pyxdg==0.27
-PyYAML==6.0.2
-pyynl @ file:///builddir/build/BUILD/kernel-6.16.12-build/kernel-6.16.12/linux-6.16.12-200.fc42.x86_64/tools/net/ynl
-RapidFuzz==3.11.0
-referencing==0.36.2
-regex==2024.11.6
+pyunormalize==17.0.0
+PyYAML==6.0.3
+regex==2025.9.18
 requests==2.32.5
-requests-file==2.0.0
-requests-ftp==0.3.1
 requests-oauthlib==2.0.0
-rpds-py==0.25.0
-rpm==4.20.1
-rpmautospec==0.8.1
-rpmautospec-core==0.1.5
+rlp==4.1.0
 rsa==4.9.1
-s3transfer==0.14.0
-scikit-learn==1.7.2
-scipy==1.16.2
-selinux @ file:///builddir/build/BUILD/libselinux-3.8-build/libselinux-3.8/src
-sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.8-build/selinux-3.8/python/sepolicy
-setools==4.5.1
-setuptools==74.1.3
-simpleaudio==1.0.4
-simpleline==1.9.0
-six==1.17.0
 sniffio==1.3.1
-sos==4.10.0
-soupsieve==2.7
-starlette==0.47.3
-systemd-python==235
-threadpoolctl==3.6.0
-tqdm==4.67.1
-typing-inspection==0.4.1
+soupsieve==2.8
+starlette==0.48.0
+tenacity==9.1.2
+toolz==1.1.0
+types-requests==2.32.4.20250913
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
-uvicorn==0.35.0
-websockets==14.1
-xkbregistry==0.3
-yt-dlp==2025.9.26
+uvicorn==0.38.0
+uvloop==0.22.1
+watchfiles==1.1.1
+web3==7.14.0
+websockets==15.0.1
+yarl==1.22.0
